[gd_scene load_steps=6 format=2]

[ext_resource path="res://graphic_minigame/biogas_watervapor.PNG" type="Texture" id=1]
[ext_resource path="res://scripts/H20.gd" type="Script" id=2]
[ext_resource path="res://Sounds/202230__deraj__pop-sound.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 288.555

[node name="H20" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -100 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="input_event" from="." to="." method="_on_H20_input_event"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
